--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,7 @@
 [build]
-builder = "NIXPACKS"
-buildCommand = "./mvnw clean package -DskipTests"
+builder = "DOCKER"
 
 [deploy]
-startCommand = "java -Dspring.profiles.active=prod -jar target/*.jar"
 healthcheckPath = "/actuator/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
