--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,11 @@
     <description>Secure RESTful API with Spring Boot</description>
     
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <jjwt.version>0.11.5</jjwt.version>
     </properties>
     
